--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -16,6 +16,6 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=http://127.0.0.1:7000
 
 [program:logsensors]
-command = %(here)s/../bin/logsensors %(here)s/../var/data.csv
+command = %(here)s/../bin/logsensors %(here)s/../var/data
 redirect_stderr = true
 stdout_logfile = %(here)s/../var/log/logsensors.log
