Add webstatus to supervisor

--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -19,3 +19,7 @@ serverurl=http://127.0.0.1:7000
 command = %(here)s/../bin/logsensors %(here)s/../var/data
 redirect_stderr = true
 stdout_logfile = %(here)s/../var/log/logsensors.log
+
+[program:webstatus]
+command = %(here)s/../bin/webstatus %(here)s/../var/data
+stdout_logfile = %(here)s/../var/log/webstatus.log
